opam-version: "2.0"
version: "v0.16.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/core_bench"
bug-reports: "https://github.com/janestreet/core_bench/issues"
dev-repo: "git+https://github.com/janestreet/core_bench.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/core_bench/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"           {>= "4.14.0"}
  "core"            {>= "v0.16" & < "v0.17"}
  "core_kernel"     {>= "v0.16" & < "v0.17"}
  "core_unix"       {>= "v0.16" & < "v0.17"}
  "ppx_compare"     {>= "v0.16" & < "v0.17"}
  "ppx_fields_conv" {>= "v0.16" & < "v0.17"}
  "ppx_jane"        {>= "v0.16" & < "v0.17"}
  "ppx_let"         {>= "v0.16" & < "v0.17"}
  "ppx_sexp_conv"   {>= "v0.16" & < "v0.17"}
  "textutils"       {>= "v0.16" & < "v0.17"}
  "dune"            {>= "2.0.0"}
  "re"              {>= "1.8.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Benchmarking library"
description: "
"
