opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/core_bench"
bug-reports: "https://github.com/janestreet/core_bench/issues"
dev-repo: "git+https://github.com/janestreet/core_bench.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/core_bench/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "command_nodejs"
  "core"
  "core_extended"
  "core_kernel"
  "core_unix"
  "delimited_parsing"
  "ppx_bench"
  "ppx_compare"
  "ppx_fields_conv"
  "ppx_jane"
  "ppx_let"
  "ppx_sexp_conv"
  "textutils"
  "time_now"
  "dune"              {>= "3.17.0"}
  "js_of_ocaml-ppx"   {= "6.0.1+ox"}
  "re"                {>= "1.8.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Benchmarking library"
description: "
"
