(library
 (name core_bench)
 (public_name core_bench)
 (libraries textutils.ascii_table core_kernel.caml_unix core
   core_bench_internals core_unix delimited_parsing core_unix.filename_unix
   core_unix.time_float_unix core_unix.time_stamp_counter)
 (preprocess
  (pps ppx_compare ppx_fields_conv ppx_let ppx_sexp_conv)))
